--- a/Programming2/a8_ToyProject2/a8_ToyProject2.vcxproj
+++ b/Programming2/a8_ToyProject2/a8_ToyProject2.vcxproj
@@ -135,6 +135,7 @@
   <ItemGroup>
     <ClInclude Include="Console.h" />
     <ClInclude Include="Screen.h" />
+    <ClInclude Include="Skill.h" />
     <ClInclude Include="Title.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
