--- a/Programming2/a10.JSON 활용하기/a10.JSON 활용하기.vcxproj
+++ b/Programming2/a10.JSON 활용하기/a10.JSON 활용하기.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{bd1e7a7c-a60c-4bc5-9532-c5e27c376f2e}</ProjectGuid>
-    <RootNamespace>a9Test</RootNamespace>
+    <ProjectGuid>{93d743ab-243c-40e2-a020-85c821756c4b}</ProjectGuid>
+    <RootNamespace>a10JSON활용하기</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.c" />
+    <ClCompile Include="10_main.c" />
     <ClCompile Include="parson.c" />
   </ItemGroup>
   <ItemGroup>
