--- a/Programming2/a10.JSON 활용하기/a10.JSON 활용하기.vcxproj.filters
+++ b/Programming2/a10.JSON 활용하기/a10.JSON 활용하기.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.c">
+    <ClCompile Include="10_main.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="parson.c">
